[project]
name = "test-helth-project"
version = "0.1.0"
description = "AI-powered Health & Wellness Planner Agent using OpenAI"
authors = [
    {name = "Azmat Ali", email = "azmataliakbar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
